<!--
  ~
  ~             $$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$
  ~             $                                                   $
  ~             $                       _oo0oo_                     $
  ~             $                      o8888888o                    $
  ~             $                      88" . "88                    $
  ~             $                      (| -_- |)                    $
  ~             $                      0\  =  /0                    $
  ~             $                    ___/`-_-'\___                  $
  ~             $                  .' \\|     |$ '.                 $
  ~             $                 / \\|||  :  |||$ \                $
  ~             $                / _||||| -:- |||||- \              $
  ~             $               |   | \\\  -  $/ |   |              $
  ~             $               | \_|  ''\- -/''  |_/ |             $
  ~             $               \  .-\__  '-'  ___/-. /             $
  ~             $             ___'. .'  /-_._-\  `. .'___           $
  ~             $          ."" '<  `.___\_<|>_/___.' >' "".         $
  ~             $         | | :  `- \`.;`\ _ /`;.`/ - ` : | |       $
  ~             $         \  \ `_.   \_ __\ /__ _/   .-` /  /       $
  ~             $     =====`-.____`.___ \_____/___.-`___.-'=====    $
  ~             $                       `=-_-='                     $
  ~             $     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~   $
  ~             $                                                   $
  ~             $          Buddha Bless         Never Bug           $
  ~             $                                                   $
  ~             $$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$
  -->

<resources>
    <string name="app_name">Project Zero</string>
    <string name="tag_nanodegree">纳米学位应用</string>
    <string name="txt_move">热门电影</string>
    <string name="txt_stock">股票雄鹰</string>
    <string name="txt_reader">XYZ阅读器</string>
    <string name="txt_news">最新闻</string>
    <string name="txt_graduation">毕业设计</string>
    <string name="txt_toast_message">启动应用: %s</string>
</resources>
