<?xml version="1.0" encoding="utf-8"?>
<!--
  ~
  ~             $$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$
  ~             $                                                   $
  ~             $                       _oo0oo_                     $
  ~             $                      o8888888o                    $
  ~             $                      88" . "88                    $
  ~             $                      (| -_- |)                    $
  ~             $                      0\  =  /0                    $
  ~             $                    ___/`-_-'\___                  $
  ~             $                  .' \\|     |$ '.                 $
  ~             $                 / \\|||  :  |||$ \                $
  ~             $                / _||||| -:- |||||- \              $
  ~             $               |   | \\\  -  $/ |   |              $
  ~             $               | \_|  ''\- -/''  |_/ |             $
  ~             $               \  .-\__  '-'  ___/-. /             $
  ~             $             ___'. .'  /-_._-\  `. .'___           $
  ~             $          ."" '<  `.___\_<|>_/___.' >' "".         $
  ~             $         | | :  `- \`.;`\ _ /`;.`/ - ` : | |       $
  ~             $         \  \ `_.   \_ __\ /__ _/   .-` /  /       $
  ~             $     =====`-.____`.___ \_____/___.-`___.-'=====    $
  ~             $                       `=-_-='                     $
  ~             $     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~   $
  ~             $                                                   $
  ~             $          Buddha Bless         Never Bug           $
  ~             $                                                   $
  ~             $$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$
  -->

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:gravity="center"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.jackie.projectzero.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/normal_margin"
        android:text="@string/tag_nanodegree"/>

    <Button
        android:id="@+id/btn_move"
        android:text="@string/txt_move"
        style="@style/button_style"/>

    <Button
        android:id="@+id/btn_stock"
        android:text="@string/txt_stock"
        style="@style/button_style"/>

    <Button
        android:id="@+id/btn_reader"
        android:text="@string/txt_reader"
        style="@style/button_style"/>

    <Button
        android:id="@+id/btn_news"
        android:text="@string/txt_news"
        style="@style/button_style"/>

    <Button
        android:id="@+id/btn_graduation"
        android:text="@string/txt_graduation"
        style="@style/button_style"/>
</LinearLayout>
